--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">weatherApp</string>
+    <string name="app_name">小天气</string>
     <string name="degree">°C</string>
+    <string name="map">地图</string>
+    <string name="setting">设置</string>
 </resources>
