为recycleView添加监听，点击后跳转到对应的天气详情页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="degree">°C</string>
     <string name="map">地图</string>
     <string name="setting">设置</string>
+    <string name="tomorrow">明天</string>
 </resources>
